--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,5 @@
 test:
   override:
+    - bundle exec rails_best_practices .
     - bundle exec rubocop
     - RAILS_ENV=test bundle exec rspec -r rspec_junit_formatter --format RspecJunitFormatter -o $CIRCLE_TEST_REPORTS/rspec/junit.xml
