--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,24 @@
 inherit_from:
   - .rubocop_todo.yml
+
+AllCops:
+  Exclude:
+    - '**/Rakefile'
+    - 'config/**/*'
+    - 'db/migrate/*'
+    - 'db/schema.rb'
+    - 'spec/rails_helper.rb'
+    - 'spec/spec_helper.rb'
+    - 'vendor/**/*'
+  TargetRubyVersion: 2.3
+
+Style/Documentation:
+  Enabled: false
+
+Style/FrozenStringLiteralComment:
+  Exclude:
+    - 'bin/*'
+    - 'config.ru'
+
+Metrics/LineLength:
+  Max: 128
