--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,7 @@
+database:
+  override:
+    - mv config/database.ci.yml config/database.yml
+    - bundle exec rake db:create db:schema:load --trace
 test:
   override:
     - bundle exec rails_best_practices .
