--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,5 +19,11 @@ jobs:
           name: Create DB
           command: bundle exec rake db:create db:schema:load --trace
       - run:
+          name: Run Rails Best Practices
+          command: bundle exec rails_best_practices .
+      - run:
+          name: Run RuboCop
+          command: bundle exec rubocop
+      - run:
           name: Run Tests
           command: bundle exec rake spec
