--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,9 @@ jobs:
       - checkout
       - run:
           name: Install System Dependencies
-          command: apk add --update --no-cache build-base postgresql-dev postgresql-libs nodejs tzdata
+          # tar and gzip are required by restore_cache section
+          # https://discuss.circleci.com/t/does-clear-cache-work-for-2-0/10965/13
+          command: apk add --update --no-cache build-base postgresql-dev postgresql-libs nodejs tzdata tar gzip
       - restore_cache:
           name: Restore bundler cache
           keys:
