--- a/circle.yml
+++ b/circle.yml
@@ -10,8 +10,10 @@ jobs:
     steps:
       - run:
           name: Install System Dependencies
-          # See also https://circleci.com/docs/2.0/custom-images/#required-tools
-          command: apk add --update --no-cache git openssh-client tar gzip build-base postgresql-dev postgresql-libs nodejs tzdata
+          command: |
+            # See also https://circleci.com/docs/2.0/custom-images/#required-tools
+            apk add --update --no-cache git openssh-client tar gzip build-base postgresql-dev postgresql-libs nodejs tzdata
+            gem install -N bundler
       - checkout
       - restore_cache:
           name: Restore bundler cache
