--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,9 @@ jobs:
       - image: ruby:2.4.1-alpine
         environment:
           RDB_URL_BASE: postgres://postgres:@localhost
+          REDIS_URL_BASE: redis://localhost:6379
       - image: postgres:9.5-alpine
+      - image: redis:3.2-alpine
     working_directory: /work
     steps:
       - run:
