--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     image: postgres:9.5-alpine
     ports:
       - 15432:5432 # for convenience
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
   redis:
     image: redis:3.2-alpine
     ports:
@@ -31,4 +33,5 @@ services:
 
 volumes:
   share:
+  postgres_data:
   redis_data:
