Add comments for .env.skeleton

--- a/.env.skeleton
+++ b/.env.skeleton
@@ -1,2 +1,8 @@
+# Create GitHub OAuth Apps in https://github.com/settings/developers
+# Authorization Callback URL needs exact match url.
+# ex. http://localhost:3000/auth/github/callback
+
+# Client ID
 GITHUB_KEY=xxx
+# Client Secret
 GITHUB_SECRET=yyy
