--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,8 @@ jobs:
       - restore_cache:
           name: Restore bundler cache
           keys:
-            - gems-{{ arch }}-{{ .Environment.COMMON_CACHE_KEY }}-{{ checksum "Gemfile.lock" }}
-            - gems-{{ arch }}-{{ .Environment.COMMON_CACHE_KEY }}-
+            - gems-{{ .Environment.COMMON_CACHE_KEY }}-{{ checksum "Gemfile.lock" }}
+            - gems-{{ .Environment.COMMON_CACHE_KEY }}-
       - run:
           name: Install Ruby Dependencies
           command: |
@@ -29,7 +29,7 @@ jobs:
             bundle clean
       - save_cache:
           name: Save bundler cache
-          key: gems-{{ arch }}-{{ .Environment.COMMON_CACHE_KEY }}-{{ checksum "Gemfile.lock" }}
+          key: gems-{{ .Environment.COMMON_CACHE_KEY }}-{{ checksum "Gemfile.lock" }}
           paths:
             - /usr/local/bundle
       - run:
