Use correct option

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           name: Install System Dependencies
           command: |
             # See also https://circleci.com/docs/2.0/custom-images/#adding-required-and-custom-tools-or-files
-            apk add --update --no-cache git openssh-client tar gzip ca-certificates \
+            apk add --update-cache --no-cache git openssh-client tar gzip ca-certificates \
               build-base postgresql-dev postgresql-libs nodejs tzdata
       - checkout
       - restore_cache:
