--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -6,3 +6,6 @@ update_configs:
   - package_manager: "ruby:bundler"
     directory: "/"
     update_schedule: "weekly"
+    allowed_updates:
+      - match:
+          update_type: "all"
