--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       - run:
           name: Install Ruby Dependencies
           command: |
-            bundle check || bundle install --jobs=4 --retry=3
+            bundle check || bundle install --jobs=4 --retry=3 --path=vendor/bundle
             bundle clean
       - save_cache:
           name: Save bundler cache
