--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,15 +36,15 @@ jobs:
             - /usr/local/bundle
       - run:
           name: Create DB
-          command: rake db:create db:schema:load --trace
+          command: bundle exec rake db:create db:schema:load --trace
       - run:
           name: Run Rails Best Practices
-          command: rails_best_practices .
+          command: bundle exec rails_best_practices .
       - run:
           name: Run RuboCop
-          command: rubocop
+          command: bundle exec rubocop
       - run:
           name: Run Tests
-          command: rspec --format progress --format RspecJunitFormatter -o test-reports/junit.xml
+          command: bundle exec rspec --format progress --format RspecJunitFormatter -o test-reports/junit.xml
       - store_test_results:
           path: test-reports/
