--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,23 @@
-version: 2
+version: 2.1
+
+orbs:
+  pushover: masutaka/pushover@dev:beta2
+
+commands:
+  # pushover
+  notify_on_failure_on_default_branch:
+    steps:
+      - pushover/notify:
+          title: "Failed: ${CIRCLE_PROJECT_REPONAME}'s job (${CIRCLE_JOB})"
+          message: "${CIRCLE_USERNAME:Bot}'s build (#${CIRCLE_BUILD_NUM}) in ${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME} (${CIRCLE_BRANCH})"
+          priority: 1 # high
+          fail_only: true
+          only_for_branches: pushover-failed-notification
+
 jobs:
   build:
     docker:
-      - image: ruby:2.7.1-alpine
+      - image: cimg/ruby:2.7.1-node
         environment:
           RDB_URL_BASE: postgres://postgres:@localhost
           REDIS_URL: redis://localhost:6379
@@ -10,14 +25,8 @@ jobs:
         environment:
           POSTGRES_HOST_AUTH_METHOD: trust
       - image: redis:4.0-alpine
-    working_directory: /work
+    working_directory: ~/repo
     steps:
-      - run:
-          name: Install System Dependencies
-          command: |
-            # See also https://circleci.com/docs/2.0/custom-images/#adding-required-and-custom-tools-or-files
-            apk add --update-cache --no-cache git openssh-client tar gzip ca-certificates \
-              build-base postgresql-dev postgresql-libs nodejs tzdata
       - checkout
       - restore_cache:
           name: Restore bundler cache
@@ -33,7 +42,7 @@ jobs:
           name: Save bundler cache
           key: gems-{{ .Environment.COMMON_CACHE_KEY }}-{{ checksum "Gemfile.lock" }}
           paths:
-            - /work/vendor/bundle
+            - ~/repo/vendor/bundle
       - run:
           name: Create DB
           command: bundle exec rake db:create db:schema:load --trace
@@ -48,3 +57,4 @@ jobs:
           command: bundle exec rspec --format progress --format RspecJunitFormatter -o test-reports/junit.xml
       - store_test_results:
           path: test-reports/
+      - notify_on_failure_on_default_branch
