--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       REDIS_URL: redis://redis:6379
       GITHUB_KEY: $GITHUB_KEY
       GITHUB_SECRET: $GITHUB_SECRET
-    command: rails s -b 0.0.0.0
+    command: bundle exec rails s -b 0.0.0.0
     depends_on:
       - rdb
       - redis
